# studyos-platform

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: PRD.md
examples/: course-materials.json
src/studyos/: __init__.py  cli.py  mastery.py  models.py  platform.py  retrieval.py
tests/: test_platform.py
