[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "studyos-platform"
version = "0.1.0"
description = "Citation-first adaptive study platform reference architecture."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Kerry Dean Jr." }]
license = { text = "MIT" }
keywords = ["ai", "education", "rag", "adaptive-learning", "platform"]

[project.scripts]
studyos = "studyos.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

